# taco

./: .gitignore  CMakeLists.txt  DEV_GUIDE.md  DEV_LOG.md  README.md  README_DEV.md  generator_simplification.py  integrator_test_results.txt  rho_timeseries.csv  spin_boson_density.csv  spin_boson_observables.csv  structure.txt  taco_cpp_readme.md
configs/: spin_boson.yaml  tcl_driver.yaml
cpp/include/taco/: bath.hpp  bath_models.hpp  bath_tabulated.hpp  correlation_fft.hpp  exec.hpp  expression.hpp  gamma.hpp  generator.hpp  io.hpp  ops.hpp  profile.hpp  propagate.hpp  rk4_dense.hpp  spin_boson.hpp  system.hpp  tcl.hpp  tcl2.hpp  tcl4.hpp  tcl4_assemble.hpp  tcl4_kernels.hpp  tcl4_mikx.hpp  version.hpp
cpp/include/taco/backend/cpu/: tcl4_mpi_omp.hpp
cpp/include/taco/backend/cuda/: tcl4_assemble_cuda.hpp  tcl4_fcr_kernels_cuda.hpp  tcl4_fused_cuda.hpp  tcl4_kernels_cuda.hpp  tcl4_mikx_cuda.hpp
cpp/python/: _taco_native.cpp
cpp/src/backend/: README.md
cpp/src/backend/cpu/: README.md  tcl4_mpi_omp.cpp
cpp/src/backend/cuda/: README.md  tcl4_assemble_cuda.cu  tcl4_fcr_kernels.cu  tcl4_fused_cuda.cu  tcl4_kernels_cuda.cu  tcl4_mikx_cuda.cu
cpp/src/backend/gpu/: README.md
cpp/src/backend/hybrid/: README.md
cpp/src/backend/mpi_cuda/: README.md
cpp/src/backend/mpi_omp/: README.md
cpp/src/backend/omp/: README.md
cpp/src/backend/serial/: README.md
cpp/src/core/: correlation.cpp  integrator.hpp  rk4_dense.cpp  version.cpp
cpp/src/tcl/: generator.cpp  tcl2.cpp  tcl2_generator.cpp  tcl4.cpp  tcl4_assemble.cpp  tcl4_kernels.cpp  tcl4_mikx.cpp
cpp/tests/: tcl4_mikx_tests.cpp
docs/: MODULES.md  PARALLEL_PLAN.md  STRUCTURE.md  TCL4_PLAN.md
examples/: TCL4_spin_boson_example.cpp  generator_demo.cpp  spin_boson.cpp  spin_boson_tcl4.cpp  tcl2_demo.cpp  tcl4_bench.cpp  tcl4_driver.cpp  tcl4_mikx_bench.cpp  tcl_driver.cpp
matlab/: MIKX.m  bcf_fft_ohmic_simple.m
python/: python_structure.txt
python/taco/: __init__.py
python/taco/Debug/: _taco_native.cp314-win_amd64.pyd
python/taco/Release/: _taco_native.cp314-win_amd64.pyd
scripts/: dev.ps1  run_tests.ps1
symbolic/: cumulant_results.csv  cumulant_results.txt  ordered_cumulants.py
tcl4/: MIKX.m  tcl4_driver.m  tcl4_kernels.m
tcl4conv_mat/: NAKZWAN_v9.m  tcl4_kernels.m
tests/: cuda_smoke.cu  gamma_tests.cpp  integrator_tests.cpp  rk4_dense_tests.cpp  spin_boson_tests.cpp  tcl4_e2e_cuda_compare.cpp  tcl4_h5_compare.cpp  tcl4_mpi_omp_tests.cpp  tcl4_tests.cpp
